--- a/01/Makefile
+++ b/01/Makefile
@@ -1,14 +1,16 @@
+all: allocator 
 
-all: main
-
-main: main.o
-	g++ main.o -o main
-
-main.o: main.cpp
-	g++ -c main.cpp
-
-test: main
-	./main
-    
-clean:
-	rm -rf *.o main
+allocator: main.o alloc.o 
+	g++ -o allocator main.o alloc.o  
+ 
+test: allocator  
+	./allocator
+	
+main.o: main.cpp alloc.h  
+	g++ -c main.cpp  
+  
+alloc.o: alloc.cpp alloc.h  
+	g++ -c alloc.cpp  
+  
+clean:  
+	rm -rf *.o allocator
